k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: ivolve
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: 225823723481.dkr.ecr.us-east-1.amazonaws.com/finalprojectapp:1
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
